--- a/order_management/src/main/resources/application.properties
+++ b/order_management/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.datasource.username=orderuser
 spring.datasource.password=orderpassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA/Hibernate Configuration
+
+# JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
